2013-05-27  Paul Smith  <psmith@gnu.org>

	* variable.c (define_automatic_variables): Create a new variable
	MAKE_HOST.

2013-05-27  Hartmut Becker  <becker.ismaning@freenet.de>

	* function.c (func_shell_base) [VMS]: Support VMS.
	* makefile.com [VMS]: Ditto.
	* makefile.vms [VMS]: Ditto.
	* makeint.h [VMS]: Ditto.
	* vmsjobs.c [VMS]: Ditto.
	* job.h: Define RECORD_SYNC_MUTEX() when OUTPUT_SYNC is not set.
	* load.c (unload_file): Fix signature if MAKE_LOAD is not set.

2013-05-26  Paul Smith  <psmith@gnu.org>

	* remake.c (f_mtime): Ensure that archive file names are in the
	string cache.  Fixes Savannah bug #38442.

	* read.c (readline): To be safe, move the entire buffer if we
	detect a CR.  Fixes Savannah bug #38945.

	* job.c (new_job): Compare OUT to the beginning of the OUT
	var/function, not IN.  Fixes Savannah bug #39035.

2013-05-22  Paul Smith  <psmith@gnu.org>

	* main.c (switches[]): Order switches so simple flags all come first.
	(define_makeflags): Rework to make option passing more
	reliable and the code less tricksy.  Ensure simple flags are kept
	in the initial batch of flags.  Do not allow any flags with
	options in that batch.  If there are only non-simple flags MAKEFLAGS
	begins with ' '.
	(print_data_base): Print the version.  Fixes part of Savannah #35336.

	* read.c (eval_buffer): Initialize lineno.

2013-05-18  Alexey Pavlov  <alexpux@gmail.com>  (tiny change)

	* w32/Makefile.am (libw32_a_SOURCES): Add compat/posixfcn.c.

	* configure.ac (OUTPUT_SYNC): Define for mingw32 target.

	* job.c (construct_command_argv_internal) <sh_cmds_dos>
	[WINDOWS32]: Add "move".  Fixes Savannah bug #30714.

	* guile.c: Move inclusion of makeint.h before gnumake.h.  This
	order must be observed when building Make, because gnumake.h must
	be included with GMK_BUILDING_MAKE defined, which makeint.h
	already does.  Otherwise, the linker will look for, and fail to
	find, gmk_* functions in some external dynamic library.
